fix: google web font on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 body {
-  font-family: "Raleway Light", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
